Fix for Steps bar not aligned correctly with rest of content

--- a/css/compat/themes/compat-listable-412-beta-7.css
+++ b/css/compat/themes/compat-listable-412-beta-7.css
@@ -1,3 +1,7 @@
+body.theme-listable form.woocommerce-checkout > * {
+  padding-left: 0;
+}
+
 body.theme-listable form .form-row .woocommerce-input-wrapper span.description {
   text-align: left;
 }
