--- a/css/compat/themes/compat-listable-rtl-412-beta-7.css
+++ b/css/compat/themes/compat-listable-rtl-412-beta-7.css
@@ -1,3 +1,7 @@
+body.theme-listable form.woocommerce-checkout > * {
+  padding-right: 0;
+}
+
 body.theme-listable form .form-row .woocommerce-input-wrapper span.description {
   text-align: right;
 }
